--- a/test.html
+++ b/test.html
@@ -8,28 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="textbox">
-        <h1>
-            Bienvenue sur QUEZZEO !
-        </h1>
-    </div>
-    <div class="container">
-<div class="form">
-    <input type="class" class="text" placeholder="class"><br>
-    <input type="text" class="text" placeholder="Entrer Ton Pseudo"> <br>
-    <input type="password" class="text" placeholder="Votre Mot De Passe"><br>
-    <button>
-        Log In
-    </button>
-    <div class="btn">
-        <button>Create New Account</button>
-     </div>
-</div>
+    <div class="login-box">
+        <h1>Connexion</h1>
+        <form action="#">
+          <select>
+            <option value="admin">Admin</option>
+            <option value="user">Utilisateur</option>
+            <option value="quizzer">Quizzer</option>
+          </select>
+          <input type="text" placeholder="Nom d'utilisateur">
+          <input type="password" placeholder="Mot de passe">
+          <input type="submit" value="Se connecter">
+        </form>
+      </div>
 
-    </div>
-        
-
-
-  </div>   
 </body>
 </html>
+
